# my-software-dev

./: .gitignore  .nojekyll  3dprint.html  README.md  _quarto.yml  about.html  index.html  projectideas.html  pyproject.toml  robots.txt  search.json  sitemap.xml  spar10.html
.github/workflows/: publish.yml
docs/: 3dprint.html  3dprint.qmd  _quarto.yml  about.html  index.html  index.qmd  projectideas.html  projectideas.qmd  spar10.html  spar10.qmd
docs/3dprint/: samples.html  samples.qmd
docs/notebooks/: demo.html  demo.qmd  geopandas.qmd  opensky.html  opensky.qmd
docs/resources/: adsb.html  adsb.qmd  ais.html  ais.qmd  aksjeeiere.html  aksjeeiere.qmd  arduino.html  arduino.qmd  carregno.html  carregno.qmd  eiendomspriser.html  eiendomspriser.qmd  frost.html  frost.qmd  gtfs.html  gtfs.qmd  index.html  index.md  nordpool.html  nordpool.qmd  nrk.html  nrk.qmd  ruter.html  ruter.qmd  statensvegvesen.html  statensvegvesen.qmd  trafiklabs_se.html  trafiklabs_se.qmd  weather.html  weather.qmd
resources/: adsb.html  ais.html  aksjeeiere.html  arduino.html  carregno.html  eiendomspriser.html  frost.html  gtfs.html  index.html  nordpool.html  nrk.html  ruter.html  statensvegvesen.html  trafiklabs_se.html  weather.html
site_libs/bootstrap/: bootstrap-f29df41e86a1f52ed002fb944f35d3db.min.css
src/my_software_dev/: __init__.py
