[project]
name = "my-software-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Knut H Pedersen", email = "knuthp@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
my-software-dev = "my_software_dev:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
