[project]
name = "my-software-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Knut H Pedersen", email = "knuthp@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.3",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "pyyaml>=6.0.2",
]

[project.scripts]
my-software-dev = "my_software_dev:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
